# webserv

./: .gitignore  AutoIndex.hpp  CGI.cpp  CGI.hpp  CMakeLists.txt  Client.hpp  ListenSocket.hpp  ListenSocketConfig.hpp  ListenSocketConfigDirectory.hpp  Makefile  PortServer.hpp  README.md  Reqs  Request.hpp  Response.hpp  Server.hpp  ServerConfig.hpp  ServerConfigDirectory.hpp  VirtualServerConfig.hpp  VirtualServerConfigDirectory.hpp  Webserv.cpp  Webserv.hpp  a.out  config.conf  file  file.txt  main.cpp  main.hpp  main2.cpp  outfile.txt  print.cpp  test.cpp  tmp_file  utils.cpp  webserv  webserv.hpp
config/: config.conf  default.conf
default_error_pages/: 301.html  404.html  405.html  500.html
gnl/: get_next_line.cpp  get_next_line.hpp  get_next_line_utils.cpp
parse/: IParse.cpp  IParse.hpp  ListenConfig.cpp  LocationConfig.cpp  LocationConfig.hpp  errorCodes.hpp  formatConfigFile.cpp  formatConfigFile.hpp  serverConfig.cpp  serverConfig.hpp  tools.cpp
src/: main.cpp  main.hpp
src/cgi/: CGI.cpp  CGI.hpp
src/http/: AutoIndex.hpp  Client.hpp  ClientRequestAnalyse.cpp  ClientRequestParse.cpp  ClientRequestRead.cpp  ClientResponse.cpp  Request.hpp  Response.hpp
src/other/: test_linux_open.cpp  utils.cpp
src/parse/: IParse.cpp  IParse.hpp  ListenConfig.cpp  LocationConfig.cpp  LocationConfig.hpp  Makefile  formatConfigFile.cpp  print_util.cpp  serverConfig.cpp  serverConfig.hpp
src/server/: PortServer.hpp  VirtualServerConfig.hpp  VirtualServerConfigDirectory.hpp  Webserv.hpp
tmp/: tmp_cgi_output_7
www/: 301.html  400.html  404.html  index.html  isDirectory.html  linked_page.html  page1.html  thml.html  uploadSuccess.html
www/1/: IntraProfileHome.html
www/1/IntraProfileHome_files/: application-6cb70f773e5277a6f1b20b883f3624b93b7486ef5cf67af6b015f3dc45f15974.js  js
www/cgi-bin/: a.out  cgiBash.sh  cgiTest.bla  cgiTest.example  cgiTest2.bla  cin.bla  cpp_get.cgi  error.out  f.html  get_post.html  hello.c  hello.py  helloCPP.bla  hellocpp.cpp  pepe.html  printEnv.bla  printEnv.cpp  test.bla  test.cgi  testCin.cpp
www/put_test/: multiple_same
www/test_index/: index.html
www/test_not_index/: 413.html  file
www/upload/: test.txt
